// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseExcelFileStream > should be able to detect headers when column is set to auto 1`] = `
[
  {
    "data": {
      "CPNE": "CNPE des sociétés financières",
      "Certificateur* 
(*liste non exhaustive - premier dans la fiche RNCP)": "MINISTERE DE L'EDUCATION NATIONALE ET DE LA JEUNESSE",
      "Code CPNE": 2,
      "Code RNCP": "RNCP1002",
      "Libellé de la formation": "Mise en oeuvre caoutchoucs élastomères thermoplastiques",
      "Libellé du Diplôme": "BP",
      "NPEC final": 9497,
    },
    "headers": [
      "Code RNCP",
      "Libellé de la formation",
      "Certificateur* 
(*liste non exhaustive - premier dans la fiche RNCP)",
      "Libellé du Diplôme",
      "Code CPNE",
      "CPNE",
      "NPEC final",
    ],
    "sheet": "npec",
  },
  {
    "data": {
      "CPNE": "CNPEFP des sociétés d’assistance",
      "Certificateur* 
(*liste non exhaustive - premier dans la fiche RNCP)": "MINISTERE DE L'EDUCATION NATIONALE ET DE LA JEUNESSE",
      "Code CPNE": 4,
      "Code RNCP": "RNCP1002",
      "Libellé de la formation": "Mise en oeuvre caoutchoucs élastomères thermoplastiques",
      "Libellé du Diplôme": "BP",
      "NPEC final": 9497,
    },
    "headers": [
      "Code RNCP",
      "Libellé de la formation",
      "Certificateur* 
(*liste non exhaustive - premier dans la fiche RNCP)",
      "Libellé du Diplôme",
      "Code CPNE",
      "CPNE",
      "NPEC final",
    ],
    "sheet": "npec",
  },
  {
    "data": {
      "CPNE": "CPNE du notariat",
      "Certificateur* 
(*liste non exhaustive - premier dans la fiche RNCP)": "MINISTERE DE L'EDUCATION NATIONALE ET DE LA JEUNESSE",
      "Code CPNE": 5,
      "Code RNCP": "RNCP1002",
      "Libellé de la formation": "Mise en oeuvre caoutchoucs élastomères thermoplastiques",
      "Libellé du Diplôme": "BP",
      "NPEC final": 9497,
    },
    "headers": [
      "Code RNCP",
      "Libellé de la formation",
      "Certificateur* 
(*liste non exhaustive - premier dans la fiche RNCP)",
      "Libellé du Diplôme",
      "Code CPNE",
      "CPNE",
      "NPEC final",
    ],
    "sheet": "npec",
  },
]
`;

exports[`parseExcelFileStream > should parse the excel file stream 1`] = `
[
  {
    "data": {
      "certificateur": "MINISTERE DE L'EDUCATION NATIONALE ET DE LA JEUNESSE",
      "cpne_code": 2,
      "cpne_libelle": "CNPE des sociétés financières",
      "diplome_libelle": "BP",
      "formation_libelle": "Mise en oeuvre caoutchoucs élastomères thermoplastiques",
      "npec": 9497,
      "rncp": "RNCP1002",
    },
    "headers": [
      "rncp",
      "formation_libelle",
      "certificateur",
      "diplome_libelle",
      "cpne_code",
      "cpne_libelle",
      "npec",
    ],
    "sheet": "npec",
  },
  {
    "data": {
      "certificateur": "MINISTERE DE L'EDUCATION NATIONALE ET DE LA JEUNESSE",
      "cpne_code": 4,
      "cpne_libelle": "CNPEFP des sociétés d’assistance",
      "diplome_libelle": "BP",
      "formation_libelle": "Mise en oeuvre caoutchoucs élastomères thermoplastiques",
      "npec": 9497,
      "rncp": "RNCP1002",
    },
    "headers": [
      "rncp",
      "formation_libelle",
      "certificateur",
      "diplome_libelle",
      "cpne_code",
      "cpne_libelle",
      "npec",
    ],
    "sheet": "npec",
  },
  {
    "data": {
      "certificateur": "MINISTERE DE L'EDUCATION NATIONALE ET DE LA JEUNESSE",
      "cpne_code": 5,
      "cpne_libelle": "CPNE du notariat",
      "diplome_libelle": "BP",
      "formation_libelle": "Mise en oeuvre caoutchoucs élastomères thermoplastiques",
      "npec": 9497,
      "rncp": "RNCP1002",
    },
    "headers": [
      "rncp",
      "formation_libelle",
      "certificateur",
      "diplome_libelle",
      "cpne_code",
      "cpne_libelle",
      "npec",
    ],
    "sheet": "npec",
  },
  {
    "data": {
      "cpne_code": 2,
      "cpne_libelle": "CNPE des sociétés financières",
      "idcc": 478,
    },
    "headers": [
      "cpne_code",
      "cpne_libelle",
      "idcc",
    ],
    "sheet": "cpne-idcc",
  },
  {
    "data": {
      "cpne_code": 4,
      "cpne_libelle": "CNPEFP des sociétés d’assistance",
      "idcc": 1801,
    },
    "headers": [
      "cpne_code",
      "cpne_libelle",
      "idcc",
    ],
    "sheet": "cpne-idcc",
  },
  {
    "data": {
      "cpne_code": 5,
      "cpne_libelle": "CPNE du notariat",
      "idcc": 2205,
    },
    "headers": [
      "cpne_code",
      "cpne_libelle",
      "idcc",
    ],
    "sheet": "cpne-idcc",
  },
]
`;

exports[`parseExcelFileStream > should skip parsing if spec is null 1`] = `
[
  {
    "data": {
      "cpne_code": 2,
      "cpne_libelle": "CNPE des sociétés financières",
      "idcc": 478,
    },
    "headers": [
      "cpne_code",
      "cpne_libelle",
      "idcc",
    ],
    "sheet": "cpne-idcc",
  },
  {
    "data": {
      "cpne_code": 4,
      "cpne_libelle": "CNPEFP des sociétés d’assistance",
      "idcc": 1801,
    },
    "headers": [
      "cpne_code",
      "cpne_libelle",
      "idcc",
    ],
    "sheet": "cpne-idcc",
  },
  {
    "data": {
      "cpne_code": 5,
      "cpne_libelle": "CPNE du notariat",
      "idcc": 2205,
    },
    "headers": [
      "cpne_code",
      "cpne_libelle",
      "idcc",
    ],
    "sheet": "cpne-idcc",
  },
]
`;
